// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch component rendering should match to snapshot - Checked: Switch checked snapshot 1`] = `
<span
  className="MuiSwitch-root"
>
  <span
    aria-disabled={false}
    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1 MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-checked-2 Mui-checked"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <span
      className="MuiIconButton-label"
    >
      <input
        checked={true}
        className="PrivateSwitchBase-input-4 MuiSwitch-input"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="MuiSwitch-thumb"
      />
    </span>
  </span>
  <span
    className="MuiSwitch-track"
  />
</span>
`;

exports[`Switch component rendering should match to snapshot - Color: Switch color primary snapshot 1`] = `
<span
  className="MuiSwitch-root"
>
  <span
    aria-disabled={false}
    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1 MuiSwitch-switchBase MuiSwitch-colorPrimary"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <span
      className="MuiIconButton-label"
    >
      <input
        className="PrivateSwitchBase-input-4 MuiSwitch-input"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="MuiSwitch-thumb"
      />
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </span>
  <span
    className="MuiSwitch-track"
  />
</span>
`;

exports[`Switch component rendering should match to snapshot - Default: Switch default snapshot 1`] = `
<span
  className="MuiSwitch-root"
>
  <span
    aria-disabled={false}
    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1 MuiSwitch-switchBase MuiSwitch-colorSecondary"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <span
      className="MuiIconButton-label"
    >
      <input
        className="PrivateSwitchBase-input-4 MuiSwitch-input"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="MuiSwitch-thumb"
      />
    </span>
  </span>
  <span
    className="MuiSwitch-track"
  />
</span>
`;

exports[`Switch component rendering should match to snapshot - Disabled: Switch disabled snapshot 1`] = `
<span
  className="MuiSwitch-root"
>
  <span
    aria-disabled={false}
    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1 MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-checked-2 Mui-checked"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <span
      className="MuiIconButton-label"
    >
      <input
        checked={true}
        className="PrivateSwitchBase-input-4 MuiSwitch-input"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="MuiSwitch-thumb"
      />
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </span>
  <span
    className="MuiSwitch-track"
  />
</span>
`;
